--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
+    "monaco-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
